--- a/precision.html
+++ b/precision.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div id="center">
+      <div id="visor" class="visor"></div>
         <div id="game">
           <div id="maze">
             <div id="end"></div>
